--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                             <input id="formSubjectId" type="text" placeholder="Assunto" class="suportFontStyle">
                         </div>
                         <div class="supTxt">
-                            <textarea id="formTxtId" class="suportFontStyle description" rows="5" cols="95" placeholder="Descrição" ></textarea>
+                            <textarea id="formTxtId" class="suportFontStyle description" rows="5" cols="" placeholder="Descrição" ></textarea>
                         </div>
                         <div class="supBtn">
                             <input id="formSendBtn" type="submit" value="Enviar" class="btn-form">
