--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
                             <h2>Suporte</h2>
                         </div>
                         <div class="supName">
-                            <input id="formName" type="text" placeholder="Nome" class="suportFontStyle">
+                            <input id="formName" type="text" placeholder=" " class="formNameClass">
+                            <span class="name-placeholder">Nome</span>
                         </div>
                         <div class="supLastName">
                             <input id="formLastName" type="text" placeholder="Sobrenome" class="suportFontStyle">
