form Ajustes CSS

--- a/index.html
+++ b/index.html
@@ -232,19 +232,24 @@
                             <span class="name-placeholder">Nome</span>
                         </div>
                         <div class="supLastName">
-                            <input id="formLastName" type="text" placeholder="Sobrenome" class="suportFontStyle">
+                            <input id="formLastName" type="text" placeholder=" " class="formLastNameClass">
+                            <span class="lastName-placeholder">Sobrenome</span>
                         </div>
                         <div class="supMail">
-                            <input id="formEmail" type="e-mail" placeholder="E-mail" class="suportFontStyle">
+                            <input id="formEmail" type="e-mail" placeholder=" " class="formMailClass">
+                            <span class="email-placeholder">E-mail</span>
                         </div>
                         <div class="supNickName">
-                            <input id="formNickName" type="text" placeholder="Apelido de Jogador" class="suportFontStyle">
+                            <input id="formNickName" type="text" placeholder=" " class="formNickNameClass">
+                            <span class="nickName-placeholder">Apelido de jogador</span>
                         </div>
                         <div class="supSubject">
-                            <input id="formSubjectId" type="text" placeholder="Assunto" class="suportFontStyle">
+                            <input id="formSubjectId" type="text" placeholder=" " class="subjectClass">
+                            <span class="subject-placeholder">Assunto</span>
                         </div>
                         <div class="supTxt">
-                            <textarea id="formTxtId" class="suportFontStyle description" rows="5" cols="" placeholder="Descrição" ></textarea>
+                            <textarea id="formTxtId" class="txtClass description" placeholder=" " ></textarea>
+                            <span class="txt-placeholder">Descrição</span>
                         </div>
                         <div class="supBtn">
                             <input id="formSendBtn" type="submit" value="Enviar" class="btn-form">
