Formulario type email

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                             <span class="lastName-placeholder">Sobrenome</span>
                         </div>
                         <div class="supMail">
-                            <input id="formEmail" type="e-mail" name="mail" placeholder=" " class="formMailClass">
+                            <input type="email" id="formEmail" name="mail" placeholder=" " class="formMailClass">
                             <span class="email-placeholder">E-mail</span>
                         </div>
                         <div class="supNickName">
@@ -251,8 +251,7 @@
                             <span class="subject-placeholder">Assunto</span>
                         </div>
                         <div class="supTxt">
-                            <textarea id="formTxtId" name="txtArea" class="txtClass description"
-                                placeholder=" "></textarea>
+                            <textarea id="formTxtId" name="txtArea" class="txtClass description" placeholder=" "></textarea>
                             <span class="txt-placeholder">Descrição</span>
                         </div>
                         <div class="supBtn">
