CSS e organizacao JS

--- a/agentes.html
+++ b/agentes.html
@@ -152,10 +152,10 @@
                 </div>
                 <div class="btn-container">
                     <div>
-                        <button class="btn1" id="CancelAddAgentButton" type="submit">Cancelar</button>
+                        <button class="btn1 btnCancelNewAgent" id="CancelAddAgentButton" type="submit">Cancelar</button>
                     </div>
                     <div>
-                        <button class="btn2 closeModalBtnSave" id="addAgentButton" type="submit">Salvar</button>
+                        <button class="btn2 btnCreateNewAgent closeModalBtnSave" id="addAgentButton" type="submit">Salvar</button>
                     </div>
                 </div>
                 <span class="modal-newAgent-close">X</p>
